--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
           <li><a href="#inicio" class="active">Inicio</a></li>
           <li><a href="#productos">Productos</a></li>
           <li><a href="#nosotros">Nosotros</a></li>
-          <li><a href="#contacto">Contacto</a></li>
         </ul>
 
         <div class="buscador-nav">
@@ -137,23 +136,32 @@
   </section>
 
   <!-- CONTACTO -->
-  <section id="contacto" class="contacto section">
-    <div class="container">
-      <h2 class="section__title">Contáctanos</h2>
-      <form class="contacto__form" id="whatsappForm">
-  <input type="text" id="nombre" placeholder="Tu nombre" required>
-  <input type="email" id="correo" placeholder="Correo electrónico" required>
-  <textarea id="mensaje" placeholder="Mensaje" required></textarea>
-  <button type="submit" class="btn">Enviar mensaje</button>
-</form>
+    
+<section id="contacto" class="contacto section">
+  <div class="container">
+    <h2 class="section__title">Contáctanos</h2>
+    <p style="text-align:center; margin-bottom:20px;">
+      ¿Tienes dudas o quieres hacer un pedido? Escríbenos directamente por WhatsApp.
+    </p>
 
+    <div style="text-align:center;">
+      <a href="https://wa.me/573153197362?text=Hola%20MotoRep,%20quiero%20más%20información%20sobre%20sus%20productos." 
+         target="_blank" 
+         class="btn"
+         style="display:inline-flex; align-items:center; gap:10px; background-color:#25D366; color:white; padding:12px 30px; border-radius:8px; font-weight:600; text-decoration:none;">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" 
+             alt="WhatsApp" width="24" height="24">
+        Contactar por WhatsApp
+      </a>
     </div>
-  </section>
+  </div>
+</section>
+
 
   <!-- FOOTER -->
   <footer class="footer">
     <div class="container">
-      <p>© 2025 MotoParts. Todos los derechos reservados.</p>
+      <p>© 2025 MotoRep. Todos los derechos reservados.</p>
     </div>
   </footer>
 
